// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should click forgot password text 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in your login details to access the portal
  </div>
  <form
    className="sign-in-form"
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <p
      className="forgot-your-password-text"
      onClick={[Function]}
    >
      Forgot your password?
    </p>
    <div
      className="spacer"
    />
    <input
      id="signInButton"
      name="signInButton"
      onClick={[Function]}
      type="submit"
      value="Login"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Haven't got an account yet?  Click here to sign up
    </p>
  </form>
</Fragment>
`;

exports[`Should click sign up text 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in your login details to access the portal
  </div>
  <form
    className="sign-in-form"
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <p
      className="forgot-your-password-text"
      onClick={[Function]}
    >
      Forgot your password?
    </p>
    <div
      className="spacer"
    />
    <input
      id="signInButton"
      name="signInButton"
      onClick={[Function]}
      type="submit"
      value="Login"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Haven't got an account yet?  Click here to sign up
    </p>
  </form>
</Fragment>
`;

exports[`Should complete login 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in your login details to access the portal
  </div>
  <div
    className="lds-ring"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</Fragment>
`;

exports[`Should fail login 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in your login details to access the portal
  </div>
  <form
    className="sign-in-form"
  >
    <input
      className="filled"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value="hootsuite@buildingim.com"
    />
    <input
      className="filled"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="Password1234!"
    />
    <p
      className="forgot-your-password-text"
      onClick={[Function]}
    >
      Forgot your password?
    </p>
    <div
      className="spacer"
    />
    <div
      className="error-callout"
    >
      <p>
        failed
      </p>
    </div>
    <div
      className="spacer"
    />
    <input
      id="signInButton"
      name="signInButton"
      onClick={[Function]}
      type="submit"
      value="Login"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Haven't got an account yet?  Click here to sign up
    </p>
  </form>
</Fragment>
`;

exports[`Should load with username prop 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in your login details to access the portal
  </div>
  <form
    className="sign-in-form"
  >
    <input
      className="filled"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value="hootsuite@buildingim.com"
    />
    <input
      className="filled"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="Password1234!"
    />
    <p
      className="forgot-your-password-text"
      onClick={[Function]}
    >
      Forgot your password?
    </p>
    <div
      className="spacer"
    />
    <div
      className="error-callout"
    >
      <p>
        failed
      </p>
    </div>
    <div
      className="spacer"
    />
    <input
      id="signInButton"
      name="signInButton"
      onClick={[Function]}
      type="submit"
      value="Login"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Haven't got an account yet?  Click here to sign up
    </p>
  </form>
</Fragment>
`;

exports[`Should render sign in box 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in your login details to access the portal
  </div>
  <form
    className="sign-in-form"
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <p
      className="forgot-your-password-text"
      onClick={[Function]}
    >
      Forgot your password?
    </p>
    <div
      className="spacer"
    />
    <input
      id="signInButton"
      name="signInButton"
      onClick={[Function]}
      type="submit"
      value="Login"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Haven't got an account yet?  Click here to sign up
    </p>
  </form>
</Fragment>
`;

exports[`Should render sign in box with webp 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.webp"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in your login details to access the portal
  </div>
  <form
    className="sign-in-form"
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <p
      className="forgot-your-password-text"
      onClick={[Function]}
    >
      Forgot your password?
    </p>
    <div
      className="spacer"
    />
    <input
      id="signInButton"
      name="signInButton"
      onClick={[Function]}
      type="submit"
      value="Login"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Haven't got an account yet?  Click here to sign up
    </p>
  </form>
</Fragment>
`;
